@startuml
'https://plantuml.com/class-diagram

package ClasesTecnicas #back:thistle;line:purple;line.bold{
    abstract class Usuario{
        usuario: String
        contrasenia: String
    }

    class ResultadoCantidadIncidentes{
        entidad: Entidad
        cantidadDeIncidentes: Integer

        compararTiempo(ResultadoCantidadIncidentes otroResultado): Int
    }

    class ResultadoTiempoCierre{
        entidad: Entidad
        tiempoDeCierre: Duration

        compararTiempo(ResultadoTiempoCierre otroResultado): Int
    }

    class Validador{
        minCaracteres: Int
        minMayusc: Int
        minMinusc: Int
        minDigitos: Int
        minEspeciales: Int
        instance: Validador

        getInstance(): Validador
        cumpleMinusculas(String contrasenia): void
        cumpleMayusculas(String contrasenia): void
        cumpleMinDigitos(String contrasenia): void
        cumpleMinEspeciales(String contrasenia): void
        esDigitoEspecial(Int c): boolean
        cumpleMinimoCaracteres(String contrasenia): void
        noestaEntreLasTop10Mil(String contrasenia): void
        validarContrasenia(String contrasenia): void
    }

      class IntegradorCSV{
            instance: IntegradorCSV
            getInstance(): IntegradorCSV
            extraerDesde(String file): List<String[]>
            transformaYCarga(List<String[]> datos): void
            convertirtransporte(String transporte): MedioDeTransporte
        }

      class AdminEntidadOrganismo {
        fechaInicioAdminstracion: Date
      }
      class AdministadorSistema {
      cantidadEntidadesCargadas: Int
      }


      class "RepoMiembros" as CopiaRepoMiembros{
      }
      class "RepoEntidadesPropietarias" as CopiaRepoEntidadesPropietarias{
      }
      class "RepoOrganismosDeControl" as CopiaRepoOrganismosDeControl{
      }
      class "RepoEntidades" as CopiaRepoEntidades{
      }
      class "Miembro" as CopiaMiembro{
      }


    IntegradorCSV ..down.> CopiaRepoEntidades
    IntegradorCSV ...> CopiaRepoEntidades
    IntegradorCSV ..> CopiaRepoMiembros
    IntegradorCSV ..> CopiaRepoEntidadesPropietarias
    IntegradorCSV ..> CopiaRepoOrganismosDeControl
    CopiaRepoEntidades..left.>ResultadoTiempoCierre
    CopiaRepoEntidades..down>ResultadoCantidadIncidentes
    CopiaMiembro -up-|>Usuario
    CopiaMiembro ...> Validador
     AdminEntidadOrganismo -up-|>Usuario
        AdministadorSistema -up-|>Usuario
}
@enduml